--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "framer-motion": "^11.1.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.5.1",
+    "react-gauge-component": "^1.2.2",
     "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
